# django-base-publications

./: .gitignore  pyproject.toml
django_base_publications/locale/ru/LC_MESSAGES/: django.mo
example/example/: settings.py
example/news/: admin.py  models.py
example/news/migrations/: 0001_initial.py
tests/: test_django_base_publications.py
