[tool.poetry]
name = "django-base-publications"
version = "0.1.0a"
description = ""
authors = ["Дмитрий <acrius@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
ipython = "^7.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
